--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <h1>Hung-Han Chen</h1>
         <h2>Software Developer</h2>
         <ul>
-          <li>Experienced in Java, PHP, HTML, CSS, JavaScript, networking and database design</li>
-          <li>Currently enrolled in Software Development and Network Engineering program</li>
-          <li>GPA 3.68/4.0 in Software Development and Network Engineering program</li>
-          <li>Represented high school to participate in a coding competition</li>
-          <li>Strong self-learning with problem solving skill gain through past working experience</li>
-          <li>Attention to detail to write effective code</li>
+          
+          <li>Enrolling in Software Development and Network Engineering at Sheridan College</li>
+          <li>Represented school to participate in the coding competition using VB6.0 language</li>
+          <li>Skills in Java(JSON), JSP, HTML/ CSS/ Javascript, PHP, MySQL, Database design.</li>
+          <li>Now working on the computer and network security, computer architecture, and Full-Stack Developer courses.</li>
+          <li>Experienced in price negotiating, market tread analyzing, communicating skill.</li>
         </ul>
       </div>
     </div>
